# GRPC_PYTHON_EXAMPLE

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: client.py  server.py  test_hello.py
